--- a/FlappyBirdDemo.Web/Components/GameContainer.razor
+++ b/FlappyBirdDemo.Web/Components/GameContainer.razor
@@ -1,6 +1,8 @@
 @inject GameManager _gameManager
 
+<div class="border-left"></div>
 <div class="game-container" tabindex="0" @onclick="_gameManager.StartGame" @onkeyup="_gameManager.Jump">
+    <div class="border-top"></div>
     <div class="sky">
         <Bird Model="_gameManager.Bird" />
     </div>
@@ -10,6 +12,7 @@
         <Pipe Model="pipe" />
     }
 </div>
+<div class="border-right"></div>
 
 @code {
     protected override void OnInitialized()
